--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -12,10 +12,22 @@
 			<div class="contenedor">
 				<div><a href="/paginaPrincipal.html"><img src="./img/logo.png" alt="logo" width="300"/></a></div>
 				<ul class="nav">
-					<li class="nav-item"><a href="#">Iniciar sesión</a></li>
+					<li class="nav-item"><a href="#">Iniciar sesión</a></li> 
+                    <!--La idea es poner una condición para que cambie entre esta opción y mostrar las opciónes listadas abajo-->
 				</ul>
 			</div>
 		</nav>
+        <!--<nav class="menu-nav">
+			<div class="contenedor">
+				<div class="logo-menu">
+					<a href="pagina_principal.php"><img src="imagenes/logo.png" alt="logo" width="300"/></a>
+				</div>
+				<ul class="nav">
+				<li class="nav-item"><a href="usuario.php">Usuario</a></li>
+				<li class="nav-item"><a href="publicar.php">Crear publicación</a></li>
+				</ul>
+			</div>
+		</nav>-->
     </header>
 </body>
 </html>
