Fontawesome y pagina de iniciode sesión y registro

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/estilo.css"/>
+	<script src="https://kit.fontawesome.com/5348be32ef.js" crossorigin="anonymous"></script>
     <title>El tintero</title>
 </head>
 <body>
     <header>
         <nav class="menu-nav">
 			<div class="contenedor">
-				<div><a href="/paginaPrincipal.html"><img src="./img/logo.png" alt="logo" width="300"/></a></div>
+				<div><a href="paginaPrincipal.html"><img src="./img/logo.png" alt="logo" width="300"/></a></div>
 				<ul class="nav">
-					<li class="nav-item"><a href="#">Iniciar sesión</a></li> 
+					<li class="nav-item"><a href="sesion.html"> Iniciar sesión <i class="fa-solid fa-user" style="color: #ffffff;"></i></a></li> 
                     <!--La idea es poner una condición para que cambie entre esta opción y mostrar las opciónes listadas abajo-->
 				</ul>
 			</div>
@@ -20,11 +21,11 @@
         <!--<nav class="menu-nav">
 			<div class="contenedor">
 				<div class="logo-menu">
-					<a href="pagina_principal.php"><img src="imagenes/logo.png" alt="logo" width="300"/></a>
+					<a href="/paginaPrincipal.html"><img src="./img/logo.png" alt="logo" width="300"/></a>
 				</div>
 				<ul class="nav">
-				<li class="nav-item"><a href="usuario.php">Usuario</a></li>
-				<li class="nav-item"><a href="publicar.php">Crear publicación</a></li>
+				<li class="nav-item"><a href="usuario.html"> Cuenta <i class="fa-solid fa-user" style="color: #ffffff;"></i></a></li>
+				<li class="nav-item"><a href="publicar.html"> Crear publicación <i class="fa-solid fa-pen-nib" style="color: #ffffff;"></i></a></li>
 				</ul>
 			</div>
 		</nav>-->
