--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -25,7 +25,7 @@
 				</div>
 				<ul class="nav">
 				<li class="nav-item"><a href="usuario.html"> Cuenta <i class="fa-solid fa-user" style="color: #ffffff;"></i></a></li>
-				<li class="nav-item"><a href="publicar.html"> Crear publicación <i class="fa-solid fa-pen-nib" style="color: #ffffff;"></i></a></li>
+				<li class="nav-item"><a href="publicar.html"> Crear publicación <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i></a></li>
 				</ul>
 			</div>
 		</nav>-->
