--- a/registro.html
+++ b/registro.html
@@ -29,7 +29,12 @@
                     <input type="text" name="usuario"><br>
                     <h2>Contraseña</h2>
                     <input type="password" name="contrasena"><br>
-                    <input type="submit" name="inicio" value="Crear cuenta">
+                    <h2>Confirmar contraseña</h2>
+                    <input type="password" name="contrasena"><br>
+                    <input type="submit" name="inicio" value="Crear cuenta"><br><br>
+                    <div class="link-registro">
+                        ¿Ya tienes cuenta? <a href="sesion.html"> Iniciar sesión</a>
+                    </div>
                 </form>
             </section>
         </main>
