--- a/contacto.html
+++ b/contacto.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/estiloContacto.css"/>
+	<script src="https://kit.fontawesome.com/5348be32ef.js" crossorigin="anonymous"></script>
+    <title>Contacto</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="menu-nav">
+			<div class="contenedor">
+				<div><a href="paginaPrincipal.html"><img src="./img/logo.png" alt="logo" width="300"/></a></div>
+				<ul class="nav">
+					<li class="nav-item"><a href="sesion.html"> Iniciar sesión <i class="fa-solid fa-user" style="color: #ffffff;"></i></a></li> 
+                    <!--La idea es poner una condición para que cambie entre esta opción y mostrar las opciónes listadas abajo-->
+				</ul>
+			</div>
+		</nav>
+        <!--<nav class="menu-nav">
+			<div class="contenedor">
+				<div class="logo-menu">
+					<a href="/paginaPrincipal.html"><img src="./img/logo.png" alt="logo" width="300"/></a>
+				</div>
+				<ul class="nav">
+				<li class="nav-item"><a href="usuario.html"> Cuenta <i class="fa-solid fa-user" style="color: #ffffff;"></i></a></li>
+				<li class="nav-item"><a href="publicar.html"> Crear publicación <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i></a></li>
+				</ul>
+			</div>
+		</nav>-->
+    </header>
+    <div class="contenedor">
+        <main class="contenido-principal">
+            <section class="tarjetas-column">  
+                <h2>Correo: </h2>
+                <h3>al02886@tecmilenio.mx</h3>
+                <h2>Telefono: </h2>
+                <h3>555-555-5555</h3>
+                <h2>Dirección: </h2>
+                <h3>Calle Guadalupe Victoria 221, Las Jaras, 52166 Metepec, Méx.</h3>
+            </section>
+        </main>
+    </div>
 </body>
+<footer>
+    <div class="contenedor">
+        <div>"No conoceré el miedo.
+            El miedo mata la mente.
+            El miedo es el pequeño mal que conduce a la destrucción total.
+            Afrontaré mi miedo.
+            Permitiré que pase sobre mí y a través de mí.
+            Y cuando haya pasado, giraré mi ojo interior para escrutar su camino.
+            Allí por donde mi miedo haya pasado ya no quedará nada, sólo estaré yo" -Frank Herbert, Dune (1965)</div>
+    </div>
+</footer>
 </html>
