--- a/sesion.html
+++ b/sesion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/estilo.css"/>
+    <link rel="stylesheet" href="./styles/estiloSesionRegistro.css"/>
 	<script src="https://kit.fontawesome.com/5348be32ef.js" crossorigin="anonymous"></script>
     <title>Iniciar sesión</title>
 </head>
@@ -38,4 +38,10 @@
         </main>
     </div>
 </body>
+<footer>
+    <div class="contenedor">
+		<div><a href="contacto.html">Contactanos</a></div>
+		<div>"El misterio de la vida no es un problema que hay que resolver, sino una realidad que hay que experimentar"	-Frank Herbert "Dune" (1965)</div>
+	</div>
+</footer>
 </html>
