--- a/registro.html
+++ b/registro.html
@@ -43,7 +43,7 @@
 <footer>
     <div class="contenedor">
 		<div><a href="contacto.html">Contactanos</a></div>
-		<div>"El misterio de la vida no es un problema que hay que resolver, sino una realidad que hay que experimentar"	-Frank Herbert "Dune" (1965)</div>
+		<div>"Dios creó Arrakis para probar a los fieles"	-Frank Herbert "Dune" (1965)</div>
 	</div>
 </footer>
 </html>
