--- a/sesion.html
+++ b/sesion.html
@@ -41,7 +41,7 @@
 <footer>
     <div class="contenedor">
 		<div><a href="contacto.html">Contactanos</a></div>
-		<div>"El misterio de la vida no es un problema que hay que resolver, sino una realidad que hay que experimentar"	-Frank Herbert "Dune" (1965)</div>
+		<div>“Las creencias se pueden manipular. Tan solo el conocimiento es peligroso”	-Frank Herbert "El mesías de Dune" (1969)</div>
 	</div>
 </footer>
 </html>
