Detalles y preparación para javaScript

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -33,15 +33,17 @@
     </header>
 	<div class="contenedor">
 		<aside class="barra-lateral">
-			<h2>Pagina en construcción<h2>
+			<h2>Sección de noticias<h2>
+			<h3>Aqui se mostraran los temas que son tendencia en la pagina</h3>	
 		</aside>
 		<main class="contenido-principal">
 			<section class="tarjetas-column">
 				<div class="tarjeta-column">
 					<div class="texto-tarjeta">
-						<h2>Este es un titulo</h2>
+						<h2>Bienvenidos!!!</h2>
 						<h3 class="tarjeta-subtitulo">Autor: Eduardo Mulhia</h3>
-						<p>Este es un texto de prueba</p>
+						<p>Este sitio es un espacio en el que escritores pueden compartir consejos y dudas con el resto de la comunidad, con el objetivo de ayudarse mutuamente.</p>
+						<p>Aun faltan muchos detalles por pulir y funciones por implementar (como una base de datos para las publicaciones y usuarios), espero en un futuro poder implementarlos :D</p>
 					</div>
 				</div>
 			</section>
