Implementacion de alertas en javascript

--- a/registro.html
+++ b/registro.html
@@ -31,7 +31,7 @@
                     <input type="password" name="contrasena"><br>
                     <h2>Confirmar contraseña</h2>
                     <input type="password" name="contrasena"><br>
-                    <input type="submit" name="inicio" value="Crear cuenta"><br><br>
+                    <input type="submit" name="inicio" value="Crear cuenta" onclick="alerta()"><br><br>
                     <div class="link-registro">
                         ¿Ya tienes cuenta? <a href="sesion.html"> Iniciar sesión</a>
                     </div>
@@ -40,6 +40,11 @@
         </main>
     </div>
 </body>
+<script>
+    function alerta(){
+        alert("Los servidores que se usaran para albergar la información de los usuarios aun no estan listos");
+    }
+</script>
 <footer>
     <div class="contenedor">
 		<div><a href="contacto.html">Contactanos</a></div>
