--- a/sesion.html
+++ b/sesion.html
@@ -29,7 +29,7 @@
                     <input type="text" name="usuario"><br>
                     <h2>Contraseña</h2>
                     <input type="password" name="contrasena"><br>
-                    <input type="submit" name="inicio" value="Iniciar Sesión"><br><br>
+                    <input type="submit" name="inicio" value="Iniciar Sesión" onclick="alerta()"><br><br>
                     <div class="link-registro">
                         ¿No tienes cuenta? <a href="registro.html"> Crear cuenta</a>
                     </div>
@@ -38,6 +38,11 @@
         </main>
     </div>
 </body>
+<script>
+    function alerta(){
+        alert("Los servidores que se usaran para albergar la información de los usuarios aun no estan listos");
+    }
+</script>
 <footer>
     <div class="contenedor">
 		<div><a href="contacto.html">Contactanos</a></div>
